--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
     <hr size="3" />
     <h2>Contact me</h2>
     <p>Phone No. 7888359669</p>
-    <a href="/contact.html"> Contact Me</a>
+    <a href="contact.html"> Contact Me</a>
   </body>
 </html>
